# agent_shelf

./: .env.example  .gitignore  README.md  agent_framework_design.md  pyproject.toml
agents/example/knowledge/: welcome.md
agents/example/prompts/: system.md
agents/example/skills/: greet.py
src/agent_shelf/: __init__.py  cli.py  router.py  runtime.py
src/agent_shelf/embeddings/: __init__.py  base.py  factory.py  local.py  openai_embed.py
src/agent_shelf/llm/: __init__.py  base.py  claude.py  factory.py  gemini.py  ollama.py  openai_llm.py
src/agent_shelf/prompts/: manager.py
src/agent_shelf/rag/: chunker.py  engine.py  loader.py
src/agent_shelf/skills/: executor.py
